style.css
:root {
  --black: #272421;
  --white: #ffffff;
  --yellow: #FFDEAA;
  --orange: #EEA249;
  --background: #FFF1DA;
}

html, body { background-color:var(--background); margin: 0; padding: 0; }

body, p { color: var(--black); font-family: 'DM Sans', sans-serif; }
h1, h2, h3, h4, h5, h6, li { font-family: 'Dela Gothic One', cursive; text-transform: uppercase;}
p { font-size: 1.2em; line-height:1.5em;}

a { color: var(--black); text-decoration: none; }
a:hover { color: var(--orange); }

ul { list-style: none; margin:0; padding:0; }
ul li { display: inline-block; padding: 0 5px; }

#top, header { background-color: var(--black); }

#top { color:var(--white); font-family: 'Dela Gothic One', cursive; font-size:1em; padding:16px 16px 0 16px; margin-bottom:0; text-align: center;}
tel { color:var(--white); font-family: 'Dela Gothic One', cursive; font-size:1.4em; }
tel:any-link { color:var(--white);}
#top .social a:hover {opacity: 0.3;}

header { background-image: url(img/bg-header.png); background-position:bottom; background-repeat: repeat-x; padding:20px 0 40px; text-align: center;}
header img { z-index: 1; margin-top: 0px; max-width: 80%;}

h1, h2 { color: var(--yellow); line-height: 1em; margin:0; padding:0; }
h2 { margin-bottom: 64px; white-space: nowrap; }
header h2 { margin-bottom: 0;}

section { padding: 40px 24px; margin-bottom:40px; max-width: 100%; }
section h2 { color:var(--orange); font-size:2em; white-space:normal; text-align: center;}
section .content { margin:0 auto; max-width:800px;}

section.dark { background-color: var(--black); color:var(--white); margin-bottom: 0; padding:120px 24px;}
section.dark .content {max-width: 100%;}
section.dark h2 { margin-bottom:40px;}
section.dark h5 { color: var(--yellow); font-size:2em; margin:0; }
section.dark p { color: var(--white); font-size:2em; margin:0; }
section.dark ul { list-style: none; text-align: center; }
section.dark ul li { display: block; width:100%; }

section.orange { background-color: var(--orange); color:var(--black); padding:120px 24px;}
section.orange h2 { color:var(--black); font-size:1.6em; margin-bottom:40px;}
section.orange blockquote { font-family: 'DM Sans', sans-serif; font-size:1.25em; font-style: italic; text-transform: none;}
section.orange p { text-align: center; text-transform: none;}

.glider-prev, .glider-next { color:var(--black)!important; }

nav { margin-bottom:80px; }
nav ul { border-bottom: 8px solid; border-top: 8px solid; border-top-color: var(--orange); border-bottom-color: var(--orange); margin:0 auto; max-width: 1240px; padding:24px 0; text-align: center; }
nav ul li { display: block; font-size:1.4em; text-transform: uppercase; }

.video { margin: 0 auto; max-width: 1024px; }
iframe { aspect-ratio:16/9; height:auto; width:100%; }

footer { background:var(--black); padding: 40px 24px; text-align: center;}
footer .phone { margin-bottom: 24px; }

form { color:var(--white); margin-bottom:40px; text-align: left }
form .row {display: block; margin: 0 auto 16px auto; width:300px; }
form .row *{display:block; margin-bottom:8px;}
form input, form textarea, form button { border-radius: 0px; border:none; font-family: 'DM Sans', sans-serif; font-size:1em; padding:4px; width:292px; }
form textarea {height:108px;}
form button { background-color: var(--orange); color: var(--black); padding:12px 16px; width:300px; }
form button:hover { cursor: pointer; opacity:0.8;}
form button:active { background-color: var(--yellow); }

#slider2 { margin:0 auto; max-width:728px;}
.splide__pagination__page { background:#fff!important;}
.splide__pagination__page.is-active { background:var(--black)!important;}
.splide__arrow { background:transparent!important;}


.gallery { padding:0; margin:0;}
.gallery .splide__arrows, .gallery .splide__pagination { visibility: hide; display: none;}
.gallery .splide__slide { padding:0; width:auto!important;}

.lightbox-content { text-align: center; }
.lightbox-content img { max-width:100%;}


@media screen and (min-width: 48em) {   
    #top { padding:16px 24px 0 24px; text-align: left; }
    tel { font-size:2em; }

    #top .social { position: absolute; top: 24px; right: 16px; }
    footer .social { position:absolute; bottom:40px; right: 16px; }
    
    header img { margin-top: -40px; }
    
    nav ul { padding:32px 0; }
    nav ul li { display:inline-block; font-size:1.2em; padding:0 24px; }
    
    section h2, section.orange h2 { font-size:3em; }
    
    footer { position:relative;}
    footer .phone { text-align: left; margin-bottom:0;}

}

@media screen and (min-width: 64em) {  
    tel { font-size:2.5em; }
    
    nav ul li { font-size:1.65em; }
    
    section h2 { font-size:4em; }
    section.dark h5 { font-size:2.5em; }
    section.dark p { font-size:2.5em; }
    section.dark ul { list-style: none; text-align: center; }
    section.dark ul li { display: inline-block; width:49%; padding:0; margin:0;}
    section.orange blockquote { font-size:1.5em; }
    
}

@media screen and (min-width: 92.5em) {
    tel { font-size:3em; }
    nav ul li { font-size:2em; }
}

